<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagecomp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/_3_x_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/_4_x_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <GridLayout
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/img1"
            app:srcCompat="@drawable/image01" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/img2"
            app:srcCompat="@drawable/image02" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img3"
            app:srcCompat="@drawable/image03" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img4"
            app:srcCompat="@drawable/image04" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img5"
            app:srcCompat="@drawable/image05" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img6"
            app:srcCompat="@drawable/image06" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img7"
            app:srcCompat="@drawable/image07" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img8"
            app:srcCompat="@drawable/image08" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/img9"
            app:srcCompat="@drawable/image09" />

    </GridLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView" />

</androidx.constraintlayout.widget.ConstraintLayout>